--- a/public/reset.css
+++ b/public/reset.css
@@ -31,6 +31,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
     line-height: 1;
+    overscroll-behavior-y: none;
 }
 ol, ul {
     list-style: none;
